# esg-integration

./: .gitignore  README.md
node/: Cargo.toml
node/src/: rpc.rs  service.rs
pallets/esg-fetcher-demo/: Cargo.toml
pallets/esg-fetcher-demo/rpc/: Cargo.toml
pallets/esg-fetcher-demo/rpc/runtime-api/: Cargo.toml
pallets/esg-fetcher-demo/rpc/runtime-api/src/: lib.rs
pallets/esg-fetcher-demo/rpc/src/: lib.rs
pallets/esg-fetcher-demo/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: .env  get_esg.sh  package.json  set_endpoint.js
